// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`delete-generation > delete by primary key 1`] = `
{
  "Key": {
    "pk": "user#123",
    "sk": "user@example.com",
  },
  "TableName": "test-table",
}
`;

exports[`delete-generation > delete with equals condition 1`] = `
{
  "ConditionExpression": "#condition_email = :condition_email",
  "ExpressionAttributeNames": {
    "#condition_email": "email",
  },
  "ExpressionAttributeValues": {
    ":condition_email": "user@example.com",
  },
  "Key": {
    "pk": "user#123",
    "sk": "user@example.com",
  },
  "TableName": "test-table",
}
`;

exports[`delete-generation > delete with exists condition 1`] = `
{
  "ConditionExpression": "attribute_exists(#condition_email)",
  "ExpressionAttributeNames": {
    "#condition_email": "email",
  },
  "ExpressionAttributeValues": {},
  "Key": {
    "pk": "user#123",
    "sk": "user@example.com",
  },
  "TableName": "test-table",
}
`;

exports[`delete-generation > key arrays are joined with # 1`] = `
{
  "Key": {
    "pk": "user#abc-def",
    "sk": "test@example.com",
  },
  "TableName": "test-table",
}
`;
